--- a/src/components/home/Services.astro
+++ b/src/components/home/Services.astro
@@ -34,7 +34,7 @@
             <div class="relative min-h-[30rem] w-full grow [container-type:inline-size] max-lg:mx-auto max-lg:max-w-sm">
             </div>
             <div class="px-8 pb-16">
-              <p class="mt-2 text-lg/7 font-medium tracking-tight text-white max-lg:text-center">School Construction and Renovation</p>
+              <p class="mt-2 text-lg/7 font-bold tracking-tight text-white max-lg:text-center">School Construction and Renovation</p>
               <p class="mt-2 max-w-lg text-sm/6 text-white max-lg:text-center">The foundation builds new schools in rural and underserved areas, ensuring they are safe, child-friendly, and conducive to learning.</p>
             </div>   
             <!-- <div class="absolute inset-x-10 bottom-0 top-10 overflow-hidden rounded-t-[12cqw] border-x-[3cqw] border-t-[3cqw] border-gray-700 bg-gray-900 shadow-2xl">
@@ -49,7 +49,7 @@
             <div class="relative min-h-[15rem] w-full grow [container-type:inline-size] max-lg:mx-auto max-lg:max-w-sm">
             </div>
             <div class="px-8 pb-16">
-              <p class="mt-2 text-lg/7 font-medium tracking-tight text-white max-lg:text-center">Provision of Educational Resources</p>
+              <p class="mt-2 text-lg/7 font-bold tracking-tight text-white max-lg:text-center">Provision of Educational Resources</p>
               <p class="mt-2 max-w-lg text-sm/6 text-white max-lg:text-center">The foundation equips schools with essential learning materials such as textbooks, desks, computers, and stationery.</p>
             </div>
             
@@ -65,7 +65,7 @@
             <div class="relative min-h-[15rem] w-full grow [container-type:inline-size] max-lg:mx-auto max-lg:max-w-sm">
             </div>
             <div class="px-8 pb-16">
-              <p class="mt-2 text-lg/7 font-medium tracking-tight text-white max-lg:text-center">Teacher Training and Development</p>
+              <p class="mt-2 text-lg/7 font-bold tracking-tight text-white max-lg:text-center">Teacher Training and Development</p>
               <p class="mt-2 max-w-lg text-sm/6 text-white max-lg:text-center">To ensure quality education, the foundation offers professional development programs for teachers.</p>
             </div>
             <!-- <div class="flex flex-1 items-center [container-type:inline-size] max-lg:py-6 lg:pb-2">
@@ -88,7 +88,7 @@
               </div>
             </div>
             <div class="px-8 pb-16">
-              <p class="mt-2 text-lg/7 font-medium tracking-tight text-white max-lg:text-center">Community Engagement and Sustainability Initiatives</p>
+              <p class="mt-2 text-lg/7 font-semibold tracking-tight text-white max-lg:text-center">Community Engagement and Sustainability Initiatives</p>
               <p class="mt-2 max-w-lg text-sm/6 text-white max-lg:text-center">we  works closely with local communities to foster sustainable educational practices. we aimintroduce solar power, water filtration systems, or agricultural projects in schools, ensuring the facilities remain functional and environmentally sustainable over time..</p>
             </div>
           </div>
