added meta description

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,8 +10,8 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout
-  description="Stone is a premium Astro theme specially designed for Business, Marketing, SaaS and Startup websites."
-  title="Stone · Premium Astro template"
+  description="Maxwell Badu Foundation is a non-profit foundation focused on building and renovating schools in africa."
+  title="Home · Maxwell Badu Foundation"
 >
   <Hero />
   <Services />
