--- a/src/pages/photos.astro
+++ b/src/pages/photos.astro
@@ -7,8 +7,8 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout
-  description="Find the photos plan that best fits your needs. Plans include seats, projects, support and more"
-  title="photos · Stone"
+  description="Maxwell Badu Foundation"
+  title="photos · Maxwell Badu Foundation"
 >
   <Heading />
   <!-- <photosTable /> -->
